--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   },
   "dependencies": {
     "autoprefixer-stylus": "1.0.0",
+    "dotenv": "^16.0.0",
     "firebase": "8.10.0",
     "prop-types": "15.7.2",
     "re-base": "4.0.0",
